# Komarowii

./: Cargo.toml  MainMenu.gd  MainMenu.tscn  Makefile.toml  Star.gd  Star.tscn  export_presets.cfg  index.html  project.godot
.github/workflows/: ci.yaml  nightly.yaml
data_parser/: Cargo.toml
data_parser/examples/: parse_file.rs  parse_file_by_block.rs
data_parser/src/: errors.rs  helpers.rs  lib.rs  planet.rs  ship.rs  start.rs  system.rs  types.rs
es_data_parser/: Cargo.toml
es_data_parser/examples/: parse_file_by_block.rs
es_data_parser/src/: effect.rs  galaxy.rs  helpers.rs  lib.rs  outfit.rs  ship.rs  system.rs  types.rs
game/: BackgroundStar.tscn  Cargo.toml  Game.tscn  Player.tscn  SquareOfBackgroundStars.gdns  SquareOfBackgroundStars.tscn  State.gdns  StellarObject.tscn
game/src/: game.rs  lib.rs  square_of_background_stars.rs  state.rs  stellar_object.rs  universe_map.rs
game/universe_map/: system.gd  system.tscn  universe_map.gdns  universe_map.tscn
game_data/: Cargo.toml
game_data/src/: data.rs  lib.rs  loader.rs  state.rs  unresolved_data.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
menu/: Cargo.toml  MainMenu.tscn
menu/src/: lib.rs  menu.rs  star.rs
