[package]
name = "game_data"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gdnative = "0.7"
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
es_data_parser = { path = "../es_data_parser" }
chrono = "0.4"
rand = "0.7"
