[package]
name = "game_data"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
# gdnative = "0.7"
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
chrono = "0.4"
rand = "0.7"

es_data_parser = { path = "../es_data_parser" }
